rewrite-java/src/main/java/org/openrewrite/java/internal/grammar/AnnotationSignatureParser.java
/*
 * Copyright 2025 the original author or authors.
 * <p>
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * https://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from /Users/jon/Projects/github/openrewrite/rewrite/rewrite-java/src/main/antlr/AnnotationSignatureParser.g4 by ANTLR 4.13.2
package org.openrewrite.java.internal.grammar;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.ArrayList;
import java.util.Iterator;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AnnotationSignatureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
    public static final int IntegerLiteral = 1;
    public static final int FloatingPointLiteral = 2;
    public static final int BooleanLiteral = 3;
    public static final int CharacterLiteral = 4;
    public static final int StringLiteral = 5;
    public static final int LPAREN = 6;
    public static final int RPAREN = 7;
    public static final int LBRACK = 8;
    public static final int RBRACK = 9;
    public static final int COMMA = 10;
    public static final int DOT = 11;
    public static final int ASSIGN = 12;
    public static final int COLON = 13;
    public static final int ADD = 14;
    public static final int SUB = 15;
    public static final int AND = 16;
    public static final int OR = 17;
    public static final int AT = 18;
    public static final int ELLIPSIS = 19;
    public static final int DOTDOT = 20;
    public static final int COLONCOLON = 21;
    public static final int WS = 22;
    public static final int Identifier = 23;
    public static final int RULE_annotation = 0;
    public static final int RULE_annotationName = 1;
    public static final int RULE_qualifiedName = 2;
    public static final int RULE_elementValuePairs = 3;
    public static final int RULE_elementValuePair = 4;
    public static final int RULE_elementValue = 5;
    public static final int RULE_primary = 6;
    public static final int RULE_type = 7;
    public static final int RULE_classOrInterfaceType = 8;
    public static final int RULE_literal = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"annotation", "annotationName", "qualifiedName", "elementValuePairs", 
			"elementValuePair", "elementValue", "primary", "type", "classOrInterfaceType", 
			"literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'('", "')'", "'['", "']'", "','", 
			"'.'", "'='", "':'", "'+'", "'-'", "'&&'", "'||'", "'@'", "'...'", "'..'", 
			"'::'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", "CharacterLiteral", 
			"StringLiteral", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "DOT", 
			"ASSIGN", "COLON", "ADD", "SUB", "AND", "OR", "AT", "ELLIPSIS", "DOTDOT", 
			"COLONCOLON", "WS", "Identifier"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnnotationSignatureParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnnotationSignatureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnnotationContext extends ParserRuleContext {
		public AnnotationNameContext annotationName() {
			return getRuleContext(AnnotationNameContext.class,0);
		}
		public TerminalNode AT() { return getToken(AnnotationSignatureParser.AT, 0); }
		public TerminalNode LPAREN() { return getToken(AnnotationSignatureParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AnnotationSignatureParser.RPAREN, 0); }
		public ElementValuePairsContext elementValuePairs() {
			return getRuleContext(ElementValuePairsContext.class,0);
		}
		public ElementValueContext elementValue() {
			return getRuleContext(ElementValueContext.class,0);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterAnnotation(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitAnnotation(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitAnnotation(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AT) {
				{
				setState(20);
				match(AT);
				}
			}

			setState(23);
			annotationName();
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(24);
				match(LPAREN);
				setState(27);
				_errHandler.sync(this);
                    if (getInterpreter().adaptivePredict(_input, 1, _ctx) == 1) {
                        setState(25);
                        elementValuePairs();
                    } else if (getInterpreter().adaptivePredict(_input, 1, _ctx) == 2) {
                        setState(26);
                        elementValue();
                    }
				setState(29);
				match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnnotationNameContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public AnnotationNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterAnnotationName(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitAnnotationName(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitAnnotationName(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final AnnotationNameContext annotationName() throws RecognitionException {
		AnnotationNameContext _localctx = new AnnotationNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_annotationName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			qualifiedName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedNameContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(AnnotationSignatureParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(AnnotationSignatureParser.Identifier, i);
		}
		public List<TerminalNode> DOT() { return getTokens(AnnotationSignatureParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(AnnotationSignatureParser.DOT, i);
		}
		public List<TerminalNode> DOTDOT() { return getTokens(AnnotationSignatureParser.DOTDOT); }
		public TerminalNode DOTDOT(int i) {
			return getToken(AnnotationSignatureParser.DOTDOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterQualifiedName(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitQualifiedName(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitQualifiedName(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_qualifiedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(Identifier);
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT || _la==DOTDOT) {
				{
				{
				setState(35);
				_la = _input.LA(1);
				if ( !(_la==DOT || _la==DOTDOT) ) {
				_errHandler.recoverInline(this);
				}
				else {
                    if (_input.LA(1) == Token.EOF) {
                        matchedEOF = true;
                    }
					_errHandler.reportMatch(this);
					consume();
				}
				setState(36);
				match(Identifier);
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementValuePairsContext extends ParserRuleContext {
		public List<ElementValuePairContext> elementValuePair() {
			return getRuleContexts(ElementValuePairContext.class);
		}
		public ElementValuePairContext elementValuePair(int i) {
			return getRuleContext(ElementValuePairContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AnnotationSignatureParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AnnotationSignatureParser.COMMA, i);
		}
		public ElementValuePairsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementValuePairs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterElementValuePairs(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitElementValuePairs(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitElementValuePairs(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final ElementValuePairsContext elementValuePairs() throws RecognitionException {
		ElementValuePairsContext _localctx = new ElementValuePairsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_elementValuePairs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			elementValuePair();
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(43);
				match(COMMA);
				setState(44);
				elementValuePair();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementValuePairContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(AnnotationSignatureParser.Identifier, 0); }
		public TerminalNode ASSIGN() { return getToken(AnnotationSignatureParser.ASSIGN, 0); }
		public ElementValueContext elementValue() {
			return getRuleContext(ElementValueContext.class,0);
		}
		public ElementValuePairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementValuePair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterElementValuePair(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitElementValuePair(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitElementValuePair(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final ElementValuePairContext elementValuePair() throws RecognitionException {
		ElementValuePairContext _localctx = new ElementValuePairContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elementValuePair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(Identifier);
			setState(51);
			match(ASSIGN);
			setState(52);
			elementValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementValueContext extends ParserRuleContext {
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public ElementValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterElementValue(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitElementValue(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitElementValue(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final ElementValueContext elementValue() throws RecognitionException {
		ElementValueContext _localctx = new ElementValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_elementValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			primary();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterPrimary(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitPrimary(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitPrimary(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_primary);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IntegerLiteral:
			case FloatingPointLiteral:
			case BooleanLiteral:
			case CharacterLiteral:
			case StringLiteral:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				literal();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public ClassOrInterfaceTypeContext classOrInterfaceType() {
			return getRuleContext(ClassOrInterfaceTypeContext.class,0);
		}
		public List<TerminalNode> LBRACK() { return getTokens(AnnotationSignatureParser.LBRACK); }
		public TerminalNode LBRACK(int i) {
			return getToken(AnnotationSignatureParser.LBRACK, i);
		}
		public List<TerminalNode> RBRACK() { return getTokens(AnnotationSignatureParser.RBRACK); }
		public TerminalNode RBRACK(int i) {
			return getToken(AnnotationSignatureParser.RBRACK, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterType(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitType(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitType(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			classOrInterfaceType();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACK) {
				{
				{
				setState(61);
				match(LBRACK);
				setState(62);
				match(RBRACK);
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassOrInterfaceTypeContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(AnnotationSignatureParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(AnnotationSignatureParser.Identifier, i);
		}
		public List<TerminalNode> DOT() { return getTokens(AnnotationSignatureParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(AnnotationSignatureParser.DOT, i);
		}
		public List<TerminalNode> DOTDOT() { return getTokens(AnnotationSignatureParser.DOTDOT); }
		public TerminalNode DOTDOT(int i) {
			return getToken(AnnotationSignatureParser.DOTDOT, i);
		}
		public List<TerminalNode> COLONCOLON() { return getTokens(AnnotationSignatureParser.COLONCOLON); }
		public TerminalNode COLONCOLON(int i) {
			return getToken(AnnotationSignatureParser.COLONCOLON, i);
		}
		public ClassOrInterfaceTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classOrInterfaceType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterClassOrInterfaceType(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitClassOrInterfaceType(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitClassOrInterfaceType(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final ClassOrInterfaceTypeContext classOrInterfaceType() throws RecognitionException {
		ClassOrInterfaceTypeContext _localctx = new ClassOrInterfaceTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_classOrInterfaceType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(Identifier);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((_la & ~0x3F) == 0 && ((1L << _la) & 3147776L) != 0) {
				{
				{
				setState(69);
				_la = _input.LA(1);
				if ( !((_la & ~0x3F) == 0 && ((1L << _la) & 3147776L) != 0) ) {
				_errHandler.recoverInline(this);
				}
				else {
                    if (_input.LA(1) == Token.EOF) {
                        matchedEOF = true;
                    }
					_errHandler.reportMatch(this);
					consume();
				}
				setState(70);
				match(Identifier);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode IntegerLiteral() { return getToken(AnnotationSignatureParser.IntegerLiteral, 0); }
		public TerminalNode FloatingPointLiteral() { return getToken(AnnotationSignatureParser.FloatingPointLiteral, 0); }
		public TerminalNode CharacterLiteral() { return getToken(AnnotationSignatureParser.CharacterLiteral, 0); }
		public TerminalNode StringLiteral() { return getToken(AnnotationSignatureParser.StringLiteral, 0); }
		public TerminalNode BooleanLiteral() { return getToken(AnnotationSignatureParser.BooleanLiteral, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).enterLiteral(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AnnotationSignatureParserListener) {
                ((AnnotationSignatureParserListener) listener).exitLiteral(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AnnotationSignatureParserVisitor) {
                return ((AnnotationSignatureParserVisitor<? extends T>) visitor).visitLiteral(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !((_la & ~0x3F) == 0 && ((1L << _la) & 62L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
                if (_input.LA(1) == Token.EOF) {
                    matchedEOF = true;
                }
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}
